main content added and layed down, need to fix the bottom cards overflowing

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
 
 nav { 
     grid-area: nav; 
+    
 }
 
 header { 
@@ -60,6 +61,8 @@ main {
     /* grid-template-columns: repeat(auto-fill, 1fr); */
     /* background-color: rgb(235, 224, 224);  */
     background-color: var(--background-color-for-main-sidebar-footer); 
+    /* height: 100%; 
+    width: 100% */
 } 
 
 sidebar { 
@@ -307,14 +310,18 @@ footer {
 .card-1-main-content > h5, 
 .card-2-main-content-container > h5, 
 .card-3-main-content-container > h5, 
-.card-4-main-content-container > h5 { 
+.card-4-main-content-container > h5, 
+.card-5-main-content-container > h5, 
+.card-6-main-content-container > h5 { 
     font-size: 1.2rem; 
 } 
 
 .bottom-card-grid-container, 
 .bottom-card-grid-container-2, 
 .bottom-card-grid-container-3, 
-.bottom-card-grid-container-4 { 
+.bottom-card-grid-container-4,
+.bottom-card-grid-container-5, 
+.bottom-card-grid-container-6 { 
     display: grid;
     grid-template-columns: 0.1fr 0.1fr 0.1fr;  
     grid-column-gap: 1em; 
@@ -336,7 +343,7 @@ footer {
     justify-self: center;
     align-self: center;
     grid-column: 2;
-    margin: 1em; 
+    /* margin: 1em;  */
     grid-row: 1; 
 } 
 
@@ -360,7 +367,7 @@ footer {
     border-left-color: 1px solid orange; 
     justify-self: center;
     align-self: center;
-    margin: 1em; 
+    /* margin: 1em;  */
  } 
 
 
@@ -378,10 +385,41 @@ footer {
     border-left-color: 1px solid orange; 
     justify-self: center;
     align-self: center;
-    margin: 1em; 
+    /* margin: 1em;  */
  }
 
 
+/* card 5 */ 
+
+.card-5-main-content-container { 
+    display: grid;
+    grid-column: 1;
+    grid-row: 3; 
+    background-color: white;
+    height: 20vh; 
+    width: 40vh; 
+    padding: 1em;  
+    border-radius: 10%; 
+    border-left-color: 1px solid orange; 
+    justify-self: center;
+    align-self: center;
+    /* margin: 1em;  */
+}
 
 
+/* card 6 */ 
 
+.card-6-main-content-container { 
+    display: grid;
+    grid-column: 2;
+    grid-row: 3; 
+    background-color: white;
+    height: 20vh; 
+    width: 40vh; 
+    padding: 1em;  
+    border-radius: 10%; 
+    border-left-color: 1px solid orange; 
+    justify-self: center;
+    align-self: center;
+    /* margin: 1em;  */
+}
